--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rakshan Shetty Portfolio</title>
+    <!-- Add base URL for React Router -->
+    <base href="/" />
+    <!-- Add meta description -->
+    <meta name="description" content="Rakshan Shetty's Portfolio - Full Stack Developer & AI/ML Engineer" />
   </head>
   <body>
     <div id="root"></div>
