--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Rakshan Shetty Portfolio</title>
+    <!-- Add base URL for React Router -->
+    <base href="/" />
+    <!-- Add meta description -->
+    <meta name="description" content="Rakshan Shetty's Portfolio - Full Stack Developer & AI/ML Engineer" />
   </head>
   <body>
     <div id="root"></div>
